qt-restricted-extras/qscintilla6/gen_qsciscintilla.h

class QColor;
class QFont;
class QMenu;
class QMetaObject;
class QWidget;
class QsciDocument;
class QsciScintilla;
class QsciStyle;
class QsciStyledText;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFont QFont;
typedef struct QHideEvent QHideEvent;
typedef struct QMenu QMenu;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
typedef struct QsciDocument QsciDocument;
typedef struct QsciScintilla QsciScintilla;
typedef struct QsciStyle QsciStyle;
typedef struct QsciStyledText QsciStyledText;
bool QsciScintilla_override_virtual_enterEvent(void* self, intptr_t slot);
bool QsciScintilla_override_virtual_leaveEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_leaveEvent(void* self, QEvent* event);
bool QsciScintilla_override_virtual_moveEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QsciScintilla_override_virtual_closeEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QsciScintilla_override_virtual_tabletEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QsciScintilla_override_virtual_actionEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QsciScintilla_override_virtual_showEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_showEvent(void* self, QShowEvent* event);
bool QsciScintilla_override_virtual_hideEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QsciScintilla_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QsciScintilla_override_virtual_metric(void* self, intptr_t slot);
int QsciScintilla_virtualbase_metric(const void* self, int param1);
bool QsciScintilla_override_virtual_initPainter(void* self, intptr_t slot);
void QsciScintilla_virtualbase_initPainter(const void* self, QPainter* painter);
bool QsciScintilla_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QsciScintilla_virtualbase_redirected(const void* self, QPoint* offset);
bool QsciScintilla_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QsciScintilla_virtualbase_sharedPainter(const void* self);
bool QsciScintilla_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciScintilla_override_virtual_childEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciScintilla_override_virtual_customEvent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_customEvent(void* self, QEvent* event);
bool QsciScintilla_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciScintilla_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciScintilla_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciScintilla_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QsciScintilla_delete(QsciScintilla* self);