qt-restricted-extras/qscintilla6/gen_qsciscintilla.nim

proc fcQsciScintilla_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_enterEvent".}
proc fQsciScintilla_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_leaveEvent".}
proc fcQsciScintilla_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_leaveEvent".}
proc fQsciScintilla_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_moveEvent".}
proc fcQsciScintilla_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_moveEvent".}
proc fQsciScintilla_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_closeEvent".}
proc fcQsciScintilla_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_closeEvent".}
proc fQsciScintilla_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_tabletEvent".}
proc fcQsciScintilla_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_tabletEvent".}
proc fQsciScintilla_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_actionEvent".}
proc fcQsciScintilla_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_actionEvent".}
proc fQsciScintilla_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_showEvent".}
proc fcQsciScintilla_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_showEvent".}
proc fQsciScintilla_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_hideEvent".}
proc fcQsciScintilla_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_hideEvent".}
proc fQsciScintilla_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QsciScintilla_virtualbase_nativeEvent".}
proc fcQsciScintilla_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_nativeEvent".}
proc fQsciScintilla_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QsciScintilla_virtualbase_metric".}
proc fcQsciScintilla_override_virtual_metric(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_metric".}
proc fQsciScintilla_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QsciScintilla_virtualbase_initPainter".}
proc fcQsciScintilla_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_initPainter".}
proc fQsciScintilla_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QsciScintilla_virtualbase_redirected".}
proc fcQsciScintilla_override_virtual_redirected(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_redirected".}
proc fQsciScintilla_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QsciScintilla_virtualbase_sharedPainter".}
proc fcQsciScintilla_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_sharedPainter".}
proc fQsciScintilla_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_timerEvent".}
proc fcQsciScintilla_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_timerEvent".}
proc fQsciScintilla_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_childEvent".}
proc fcQsciScintilla_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_childEvent".}
proc fQsciScintilla_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QsciScintilla_virtualbase_customEvent".}
proc fcQsciScintilla_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_customEvent".}
proc fQsciScintilla_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QsciScintilla_virtualbase_connectNotify".}
proc fcQsciScintilla_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_connectNotify".}
proc fQsciScintilla_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QsciScintilla_virtualbase_disconnectNotify".}
proc fcQsciScintilla_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_disconnectNotify".}
proc fcQsciScintilla_delete(self: pointer) {.importc: "QsciScintilla_delete".}


func init*(T: type QsciScintilla, h: ptr cQsciScintilla): QsciScintilla =
  T(h: h)
proc create*(T: type QsciScintilla, parent: gen_qwidget.QWidget): QsciScintilla =

  QsciScintilla.init(fcQsciScintilla_new(parent.h))
proc create*(T: type QsciScintilla, ): QsciScintilla =

  QsciScintilla.init(fcQsciScintilla_new2())
proc metaObject*(self: QsciScintilla, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQsciScintilla_metaObject(self.h))

proc metacast*(self: QsciScintilla, param1: cstring): pointer =

  fcQsciScintilla_metacast(self.h, param1)

proc metacall*(self: QsciScintilla, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQsciScintilla_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QsciScintilla, s: cstring): string =

  let v_ms = fcQsciScintilla_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc apiContext*(self: QsciScintilla, pos: cint, context_start: ptr cint, last_word_start: ptr cint): seq[string] =

  var v_ma = fcQsciScintilla_apiContext(self.h, pos, context_start, last_word_start)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc annotate*(self: QsciScintilla, line: cint, text: string, style: cint): void =

  fcQsciScintilla_annotate(self.h, line, struct_miqt_string(data: text, len: csize_t(len(text))), style)

proc annotate2*(self: QsciScintilla, line: cint, text: string, style: gen_qscistyle.QsciStyle): void =

  fcQsciScintilla_annotate2(self.h, line, struct_miqt_string(data: text, len: csize_t(len(text))), style.h)

proc annotate3*(self: QsciScintilla, line: cint, text: gen_qscistyledtext.QsciStyledText): void =

  fcQsciScintilla_annotate3(self.h, line, text.h)

proc annotation*(self: QsciScintilla, line: cint): string =

  let v_ms = fcQsciScintilla_annotation(self.h, line)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc annotationDisplay*(self: QsciScintilla, ): QsciScintillaAnnotationDisplay =

  QsciScintillaAnnotationDisplay(fcQsciScintilla_annotationDisplay(self.h))

proc clearAnnotations*(self: QsciScintilla, ): void =

  fcQsciScintilla_clearAnnotations(self.h)

proc autoCompletionCaseSensitivity*(self: QsciScintilla, ): bool =

  fcQsciScintilla_autoCompletionCaseSensitivity(self.h)

proc autoCompletionFillupsEnabled*(self: QsciScintilla, ): bool =

  fcQsciScintilla_autoCompletionFillupsEnabled(self.h)

proc autoCompletionReplaceWord*(self: QsciScintilla, ): bool =

  fcQsciScintilla_autoCompletionReplaceWord(self.h)

proc autoCompletionShowSingle*(self: QsciScintilla, ): bool =

  fcQsciScintilla_autoCompletionShowSingle(self.h)

proc autoCompletionSource*(self: QsciScintilla, ): QsciScintillaAutoCompletionSource =

  QsciScintillaAutoCompletionSource(fcQsciScintilla_autoCompletionSource(self.h))

proc autoCompletionThreshold*(self: QsciScintilla, ): cint =

  fcQsciScintilla_autoCompletionThreshold(self.h)

proc autoCompletionUseSingle*(self: QsciScintilla, ): QsciScintillaAutoCompletionUseSingle =

  QsciScintillaAutoCompletionUseSingle(fcQsciScintilla_autoCompletionUseSingle(self.h))

proc autoIndent*(self: QsciScintilla, ): bool =

  fcQsciScintilla_autoIndent(self.h)

proc backspaceUnindents*(self: QsciScintilla, ): bool =

  fcQsciScintilla_backspaceUnindents(self.h)

proc beginUndoAction*(self: QsciScintilla, ): void =

  fcQsciScintilla_beginUndoAction(self.h)

proc braceMatching*(self: QsciScintilla, ): QsciScintillaBraceMatch =

  QsciScintillaBraceMatch(fcQsciScintilla_braceMatching(self.h))

proc bytes*(self: QsciScintilla, start: cint, endVal: cint): seq[byte] =

  var v_bytearray = fcQsciScintilla_bytes(self.h, start, endVal)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc callTipsPosition*(self: QsciScintilla, ): QsciScintillaCallTipsPosition =

  QsciScintillaCallTipsPosition(fcQsciScintilla_callTipsPosition(self.h))

proc callTipsStyle*(self: QsciScintilla, ): QsciScintillaCallTipsStyle =

  QsciScintillaCallTipsStyle(fcQsciScintilla_callTipsStyle(self.h))

proc callTipsVisible*(self: QsciScintilla, ): cint =

  fcQsciScintilla_callTipsVisible(self.h)

proc cancelFind*(self: QsciScintilla, ): void =

  fcQsciScintilla_cancelFind(self.h)

proc cancelList*(self: QsciScintilla, ): void =

  fcQsciScintilla_cancelList(self.h)

proc caseSensitive*(self: QsciScintilla, ): bool =

  fcQsciScintilla_caseSensitive(self.h)

proc clearFolds*(self: QsciScintilla, ): void =

  fcQsciScintilla_clearFolds(self.h)

proc clearIndicatorRange*(self: QsciScintilla, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint, indicatorNumber: cint): void =

  fcQsciScintilla_clearIndicatorRange(self.h, lineFrom, indexFrom, lineTo, indexTo, indicatorNumber)

proc clearRegisteredImages*(self: QsciScintilla, ): void =

  fcQsciScintilla_clearRegisteredImages(self.h)

proc color*(self: QsciScintilla, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciScintilla_color(self.h))

proc contractedFolds*(self: QsciScintilla, ): seq[cint] =

  var v_ma = fcQsciScintilla_contractedFolds(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc convertEols*(self: QsciScintilla, mode: QsciScintillaEolMode): void =

  fcQsciScintilla_convertEols(self.h, cint(mode))

proc createStandardContextMenu*(self: QsciScintilla, ): gen_qmenu.QMenu =

  gen_qmenu.QMenu(h: fcQsciScintilla_createStandardContextMenu(self.h))

proc document*(self: QsciScintilla, ): gen_qscidocument.QsciDocument =

  gen_qscidocument.QsciDocument(h: fcQsciScintilla_document(self.h))

proc endUndoAction*(self: QsciScintilla, ): void =

  fcQsciScintilla_endUndoAction(self.h)

proc edgeColor*(self: QsciScintilla, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQsciScintilla_edgeColor(self.h))

proc edgeColumn*(self: QsciScintilla, ): cint =

  fcQsciScintilla_edgeColumn(self.h)

proc edgeMode*(self: QsciScintilla, ): QsciScintillaEdgeMode =

  QsciScintillaEdgeMode(fcQsciScintilla_edgeMode(self.h))

proc setFont*(self: QsciScintilla, f: gen_qfont.QFont): void =

  fcQsciScintilla_setFont(self.h, f.h)

proc eolMode*(self: QsciScintilla, ): QsciScintillaEolMode =

  QsciScintillaEolMode(fcQsciScintilla_eolMode(self.h))

proc eolVisibility*(self: QsciScintilla, ): bool =

  fcQsciScintilla_eolVisibility(self.h)

proc extraAscent*(self: QsciScintilla, ): cint =

  fcQsciScintilla_extraAscent(self.h)

proc extraDescent*(self: QsciScintilla, ): cint =

  fcQsciScintilla_extraDescent(self.h)

proc fillIndicatorRange*(self: QsciScintilla, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint, indicatorNumber: cint): void =

  fcQsciScintilla_fillIndicatorRange(self.h, lineFrom, indexFrom, lineTo, indexTo, indicatorNumber)
